modifcations menu de base

--- a/Clients/SGEGWebClient/WebClient/Pages/_Layout.cshtml
+++ b/Clients/SGEGWebClient/WebClient/Pages/_Layout.cshtml
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - WebClient</title>
+    <title>@ViewData["Title"] - Bis Solution</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,13 +26,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-page="/Index" class="navbar-brand">WebClient</a>
+                <a asp-page="/Index" class="navbar-brand">Bis Solution</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-page="/Index">Home</a></li>
+                    <li><a asp-page="/Products">Products</a></li>
+                    <li><a asp-page="/Services">Services</a></li>
                     <li><a asp-page="/About">About</a></li>
                     <li><a asp-page="/Contact">Contact</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a asp-page="/Account">Account</a></li>
                 </ul>
             </div>
         </div>
@@ -41,7 +46,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - WebClient</p>
+            <p>&copy; 2018 - Bis Solution</p>
         </footer>
     </div>
 
