Corrections from cleanup.

--- a/WebApp/WebApp/Pages/Category/CreateCategory.cshtml
+++ b/WebApp/WebApp/Pages/Category/CreateCategory.cshtml
@@ -8,7 +8,7 @@
 <h2>Create Category</h2>
 <hr />
 @{
-    using (Html.BeginForm("CreateCategory", "Category", FormMethod.Post))
+    using (Html.BeginForm("Create", "Category", FormMethod.Post))
     {
     <div class="input-group form-group mb-3">
         <div class="input-group-prepend">
