--- a/WebApp/WebApp/Pages/Shared/_Layout.cshtml
+++ b/WebApp/WebApp/Pages/Shared/_Layout.cshtml
@@ -50,6 +50,7 @@
                 <li class="nav-item"><a class="nav-link" href="/About">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="/Contact">Contact</a></li>
             </ul>
+            <partial name="_LoginPartial" />
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
