--- a/WebApp/WebApp/Pages/Shared/_Layout.cshtml
+++ b/WebApp/WebApp/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                         Categories
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/Category/ListCategory">List Categories</a>
+                        <a class="dropdown-item" href="@Url.Action("List","Category")">List Categories</a>
                         <a class="dropdown-item" href="/Category/CreateCategory">Create Category</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Something else here</a>
