--- a/WebApp/WebApp/Pages/Category/ListCategory.cshtml
+++ b/WebApp/WebApp/Pages/Category/ListCategory.cshtml
@@ -15,6 +15,8 @@
             <th scope="col">Name</th>
             <th scope="col">Description</th>
             <th scope="col">Parent Category</th>
+            <th scope="col">View</th>
+            <th scope="col">Edit</th>
         </tr>
     </thead>
     <tbody>
@@ -27,6 +29,8 @@
                     <td>@cat.Name</td>
                     <td>@cat.Description</td>
                     <td>@cat?.ParentCategory?.Name</td>
+                    <td>@Html.ActionLink("View", "ViewCategory", "Category", new { id = cat.Id })</td>
+                    <td>@Html.ActionLink("Edit", "EditCategory", "Category", new { id = cat.Id })</td>
                 </tr>
             }
         }
