--- a/WebApp/WebApp/Pages/Category/ViewCategory.cshtml
+++ b/WebApp/WebApp/Pages/Category/ViewCategory.cshtml
@@ -1,9 +1,33 @@
 ﻿@page
+@using BL.Interface
 @model WebApp.Pages.Category.ViewCategoryModel
 @{
-    ViewData["Title"] = "ViewCategory";
+    // ViewData["Title"] = "ViewCategory";
     Layout = "~/Pages/Shared/_Layout.cshtml";
+    var viewModel = ViewBag.Model as ViewCategoryModel;
 }
 
-<h2>ViewCategory</h2>
+<h2>View Category</h2>
 
+<hr />
+
+<div class="input-group form-group mb-3">
+    <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">Category name :</span>
+    </div>
+    <label class="form-control">@viewModel.Category.Name</label>
+</div>
+
+<div class="input-group form-group">
+    <div class="input-group-prepend">
+        <span class="input-group-text">Description :</span>
+    </div>
+    <label class="form-control">@viewModel.Category.Description</label>
+</div>
+
+@*<div class="input-group form-group mb-3">
+        <div class="input-group-prepend">
+            <span class="input-group-text" id="basic-addon1">Parent Category :</span>
+        </div>
+        <input type="text" class="form-control" placeholder="Parent Category" aria-label="ParentCategory" aria-describedby="basic-addon1">
+    </div>*@
