--- a/WebApp/WebApp/Pages/Shared/_Layout.cshtml
+++ b/WebApp/WebApp/Pages/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="@Url.Action("List","Category")">List Categories</a>
-                        <a class="dropdown-item" href="/Category/CreateCategory">Create Category</a>
+                        <a class="dropdown-item" href="@Url.Action("CreateCategory","Category")">Create Category</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Something else here</a>
                     </div>
