--- a/WebApp/WebApp/Pages/Shared/_Layout.cshtml
+++ b/WebApp/WebApp/Pages/Shared/_Layout.cshtml
@@ -41,8 +41,8 @@
                         Products
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/Product/ListProduct">List Products</a>
-                        <a class="dropdown-item" href="/Product/CreateProduct">Create Product</a>
+                        <a class="dropdown-item" href="@Url.Action("List","Product")">List Products</a>
+                        <a class="dropdown-item" href="@Url.Action("CreateProduct","Product")">Create Product</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Something else here</a>
                     </div>
